k8s/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: cineops
  labels:
    component: backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 20% 
      maxSurge: 20%
  replicas: 2
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
      - name: backend
        image: maksymw/cineops-backend:v2
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          runAsGroup: 10001
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "1G"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
